--- a/zth/package.json
+++ b/zth/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue/eslint-config-standard": "^8.0.1",
     "@vueuse/components": "^9.6.0",
     "@vueuse/core": "^9.6.0",
     "axios": "^1.1.3",
@@ -17,7 +18,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
