--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,12 +1,10 @@
 {
-  "semi": true,
-  "singleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
-  "trailingComma": "none",
-  "bracketSpacing": true,
+  "useTabs": false,
+  "semi": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "avoid",
-  "endOfLine": "lf",
-  "vueIndentScriptAndStyle": true
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
