--- a/zth/package.json
+++ b/zth/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "build": "vite build",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "dev": "vite",
     "preview": "vite preview"
   },
@@ -21,9 +21,10 @@
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "node-sass": "^8.0.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.2",
     "sass-loader": "^13.2.0",
-    "vite": "^3.1.8",
-    "vite-svg-loader": "^3.6.0"
+    "stylelint": "^14.16.1",
+    "stylelint-scss": "^4.3.0",
+    "vite": "^3.1.8"
   }
 }
