--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "coingecko-api": "^1.0.10",
     "express": "^4.18.2",
+    "latest": "^0.2.0",
+    "node": "^19.4.0",
     "nodemon": "^2.0.20"
   }
 }
