--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "coingecko-api": "^1.0.10",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "latest": "^0.2.0",
-    "node": "^19.4.0",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.9.0",
+    "nodemon": "^2.0.20",
+    "web3": "^1.8.1"
   }
 }
