--- a/server/src/package.json
+++ b/server/src/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.16",
     "coingecko-api": "^1.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "global": "^4.4.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
+    "typescript": "^4.9.4",
     "web3": "^1.8.1"
   },
   "devDependencies": {
