--- a/zth/package.json
+++ b/zth/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^9.6.0",
     "axios": "^1.1.3",
     "sass": "^1.56.1",
+    "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.0"
