--- a/zth/package.json
+++ b/zth/package.json
@@ -13,11 +13,11 @@
     "@vueuse/components": "^9.6.0",
     "@vueuse/core": "^9.6.0",
     "axios": "^1.1.3",
+    "pinia": "^2.0.30",
     "sass": "^1.56.1",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
-    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
