--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.16",
     "coingecko-api": "^1.0.10",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
