--- a/zth/package.json
+++ b/zth/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "pinia": "^2.0.30",
     "sass": "^1.56.1",
     "vite-svg-loader": "^4.0.0",
