--- a/zth/package.json
+++ b/zth/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "build": "vite build",
-    "format": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier . --write",
     "lint:css": "stylelint '**/*.scss'",
     "dev": "vite",
     "preview": "vite preview"
@@ -14,17 +14,22 @@
     "@vueuse/core": "^9.6.0",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
+    "eslint-config-prettier": "^8.6.0",
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.30",
     "sass": "^1.56.1",
+    "typescript": "^4.9.5",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "^18.14.0",
+    "eslint-plugin-vue": "^9.9.0",
     "node-sass": "^8.0.0",
-    "prettier": "^2.8.2",
+    "prettier": "2.8.4",
     "sass-loader": "^13.2.0",
     "stylelint": "^14.16.1",
     "stylelint-scss": "^4.3.0",
