--- a/zth/tsconfig.json
+++ b/zth/tsconfig.json
@@ -17,40 +17,18 @@
     "target": "es5",
     "noEmit": true,
     "resolveJsonModule": true,
-    "lib": [
-      "ESNext.Array",
-      "DOM"
-    ],
+    "lib": ["ESNext.Array", "DOM"],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@assets*": [
-        "src/assets/BaseIcons/*"
-      ],
-      "@components/*": [
-        "src/zth/components/*",
-        "src/zth/pages/*"
-      ],
-      "@interfaces/*": [
-        "src/interfaces/*"
-      ],
-      "@utils/*": [
-        "src/components/utils/*"
-      ],
-      "tslib": [
-        "node_modules/tslib/tslib.d.ts"
-      ],
-      "@json/*": [
-        "src/json/*"
-      ],
-      "@svg/*": [
-        "src/assets/BaseIcons/svg/*"
-      ]
+      "@/*": ["src/*"],
+      "@assets*": ["src/assets/BaseIcons/*"],
+      "@components/*": ["src/zth/components/*", "src/zth/pages/*"],
+      "@interfaces/*": ["src/interfaces/*"],
+      "@utils/*": ["src/components/utils/*"],
+      "tslib": ["node_modules/tslib/tslib.d.ts"],
+      "@json/*": ["src/json/*"],
+      "@svg/*": ["src/assets/BaseIcons/svg/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
