--- a/zth/tsconfig.json
+++ b/zth/tsconfig.json
@@ -1,56 +1,28 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "declarationMap": true,
-    "allowJs": true,
-    "sourceMap": true,
+    "target": "esnext",
+    "module": "esnext",
     "strict": true,
-    "strictFunctionTypes": false,
-    "importHelpers": true,
-    "noImplicitReturns": true,
-    "module": "ESNext",
+    "jsx": "preserve",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "target": "es5",
-    "noEmit": true,
+    "forceConsistentCasingInFileNames": true,
+    "useDefineForClassFields": true,
     "resolveJsonModule": true,
-    "lib": [
-      "ESNext.Array",
-      "DOM"
-    ],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@assets*": [
-        "src/assets/BaseIcons/*"
-      ],
-      "@components/*": [
-        "src/zth/components/*",
-        "src/zth/pages/*"
-      ],
-      "@interfaces/*": [
-        "src/interfaces/*"
-      ],
-      "@utils/*": [
-        "src/components/utils/*"
-      ],
-      "tslib": [
-        "node_modules/tslib/tslib.d.ts"
-      ],
-      "@json/*": [
-        "src/json/*"
-      ],
-      "@svg/*": [
-        "src/assets/BaseIcons/svg/*"
-      ]
-    }
+
+  "types": ["vite/client", "node"],
+  "baseUrl": ".",
+
+  "paths": {
+    "@/*": ["src/*"]
   },
-  "include": [
-    "src/**/*"
-  ]
+  "allowJs": true,
+  "sourceMap": true,
+   
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "src/**/*.vue", "src/main.js"],
+  "exclude": ["node_modules"]
 }
