--- a/zth/package.json
+++ b/zth/package.json
@@ -21,30 +21,32 @@
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.30",
     "sass": "^1.56.1",
+    "typescript": "^4.9.5",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3",
-    "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@vitejs/plugin-vue": "^3.1.2",
+    "eslint": "^8.34.0",
+    "@vue/eslint-config-airbnb": "^6.0.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "^18.14.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-airbnb": "^6.0.0",
-    "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.9.0",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "node-sass": "^8.0.0",
     "prettier": "2.8.4",
     "sass-loader": "^13.2.0",
     "stylelint": "^14.16.1",
     "stylelint-scss": "^4.3.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
     "typescript": "~4.5.5",
     "vite": "^3.1.8"
   }
