--- a/zth/tsconfig.json
+++ b/zth/tsconfig.json
@@ -21,6 +21,6 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
 
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "src/**/*.vue"],
   "exclude": ["node_modules", "dist", "public"]
 }
