--- a/zth/tsconfig.json
+++ b/zth/tsconfig.json
@@ -11,7 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "resolveJsonModule": true,
-    "types": ["vite/client", "node"],
+    "types": ["vite/client", "node",  "webpack-env"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
@@ -22,5 +22,6 @@
   },
 
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "src/**/*.vue"],
-  "exclude": ["node_modules", "dist", "public"]
+  "exclude": ["node_modules", "dist", "public"],
+    "types": ["vite-svg-loader", "vite/client"]
 }
