--- a/zth/tsconfig.json
+++ b/zth/tsconfig.json
@@ -11,7 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "resolveJsonModule": true,
-    "types": ["vite/client", "node",  "webpack-env"],
+    "types": ["vite/client", "node"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
@@ -21,7 +21,6 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
 
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "src/**/*.vue"],
-  "exclude": ["node_modules", "dist", "public"],
-    "types": ["vite-svg-loader", "vite/client"]
+  "include": ["src/**/*.ts","src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "src/**/*.vue"],
+  "types": ["vite-svg-loader", "vite/client"],
 }
