--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,17 +1,17 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@now/node"
-      }
-    ],
-    "routes": [
-      {
+// {
+//     "version": 2,
+//     "builds": [
+//       {
+//         "src": "index.js",
+//         "use": "@now/node"
+//       }
+//     ],
+//     "routes": [
+//       {
        
-        "src": "/(.*)",
+//         "src": "/(.*)",
         
-        "dest": "index.js"
-      }
-    ]
-  }
+//         "dest": "index.js"
+//       }
+//     ]
+//   }
