--- a/zth/tsconfig.json
+++ b/zth/tsconfig.json
@@ -21,6 +21,8 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
 
+
   "include": ["src/**/*.ts","src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "src/**/*.vue"],
   "types": ["vite-svg-loader", "vite/client"],
+  "exclude": ["node_modules"]
 }
