--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
+    "puppeteer": "^19.8.0",
     "web3": "^1.8.1"
   },
   "devDependencies": {
