--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,12 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.8.0",
-    "web3": "^1.8.1"
+    "web3": "^0.20.7"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
