--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.8.0",
     "web3": "^0.20.7"
