--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,13 @@
     "@types/express": "^4.17.16",
     "coingecko-api": "^1.0.10",
     "cookie-parser": "^1.4.6",
+    "cron": "^2.3.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
-    "node-cron": "^3.0.2",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.8.0",
     "web3": "^0.20.7"
