--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.8.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "web3": "^0.20.7"
   },
   "devDependencies": {
