--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.16",
+    "abort-controller": "^3.0.0",
     "coingecko-api": "^1.0.10",
     "cookie-parser": "^1.4.6",
     "cron": "^2.3.0",
