--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "puppeteer": "^19.8.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "socket.io": "^4.7.1",
     "web3": "^4.0.1",
     "ws": "^8.13.0"
   },
