--- a/zth/package.json
+++ b/zth/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.30",
     "sass": "^1.56.1",
+    "socket.io-client": "^4.7.1",
     "typescript": "^4.9.5",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.41",
