--- a/zth/package.json
+++ b/zth/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^9.6.0",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "dialog-polyfill": "^0.5.6",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.6.0",
     "js-cookie": "^3.0.1",
