--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.16",
     "abort-controller": "^3.0.0",
+    "axios": "^1.4.0",
     "binance-api-node": "^0.12.6",
     "coingecko-api": "^1.0.10",
     "cookie-parser": "^1.4.6",
@@ -20,12 +21,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "jimp": "^0.22.10",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodemon": "^3.0.1",
     "puppeteer": "^20.8.3",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "sharp": "^0.32.4",
     "socket.io": "^4.7.1",
     "web3": "^4.0.3",
     "ws": "^8.13.0"
