--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.16",
-    "abort-controller": "^3.0.0",
     "axios": "^1.4.0",
     "binance-api-node": "^0.12.6",
     "coingecko-api": "^1.0.10",
@@ -21,10 +20,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "jimp": "^0.22.10",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
-    "puppeteer": "^20.8.3",
+    "puppeteer": "^20.9.0",
+    "puppeteer-cluster": "^0.23.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "sharp": "^0.32.4",
