--- a/zth/package.json
+++ b/zth/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.9.5",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.41",
+    "vue-gtag": "^2.0.1",
     "vue-router": "^4.1.5",
     "webpack": "^5.75.0"
   },
