--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,12 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "crypto backend server",
   "main": "index.js",
+  "engines": {
+    "node": "20.x",
+    "npm": "10.4.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -21,7 +25,6 @@
     "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
-    "npm": "^10.2.4",
     "puppeteer": "^19.4.0",
     "puppeteer-cluster": "^0.23.0",
     "puppeteer-extra": "^3.3.6",
@@ -34,6 +37,8 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
