--- a/server/.gitignore
+++ b/server/.gitignore
@@ -6,7 +6,7 @@ coverage
 *.local
 .env
 .prettierrc
-
+.cache
 
 # Editor directories and files
 .vscode/*
@@ -17,4 +17,4 @@ coverage
 *.njsproj
 *.sln
 *.sw?
-*.cache
+*.cachenode_modules
