--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "crypto backend server",
   "main": "index.js",
   "engines": {
-    "node": "20.x",
-    "npm": "10.4.x"
+    "node": "20.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,13 +17,17 @@
     "axios": "^1.4.0",
     "binance-api-node": "^0.12.6",
     "coingecko-api": "^1.0.10",
+    "coingecko-api-v3": "^0.0.29",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cron": "^2.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "firebase": "^10.11.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "puppeteer": "^19.4.0",
     "puppeteer-cluster": "^0.23.0",
     "puppeteer-extra": "^3.3.6",
@@ -32,6 +35,7 @@
     "sharp": "^0.32.4",
     "socket.io": "^4.7.1",
     "stopword": "^2.0.8",
+    "tesseract.js": "^5.0.5",
     "twitter-api-v2": "^1.15.2",
     "web3": "^4.0.3",
     "ws": "^8.13.0"
